++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.7.9
===============

Bug Fixes
---------

* Remove 'limit' from SelectResults after setting start/end so .clone()
  never see limit again.

Other Changes
-------------

* Changed the default value for 'varchar' in BLOBColumns from 'auto' to False
  (so that the default type for the columns in  MySQL is BLOB, not TEXT).

SQLObject 0.7.8
===============

Released 25 July 2007.

Bug Fixes
---------

* Replaced calls to style.dbColumnToPythonAttr() in joins.py by name/dbName
  lookup in case the user named columns differently using dbName.

* Minor correction in the tests: we fully support EnumCol in Postgres.

* MySQLConnection now recognizes Enum, Double and Time columns when drawing the
  database scheme from DB.

* Minor fix in FirebirdConnection.fromDatabase.

* Fixed a bug with default field values for columns for Firebird connection.

* Prevent a deadlock in declarative.threadSafeMethod() by not reacquiring
  the class lock.

* Fixed a bug in col.createSQL().

* Fixed a bug in converting date/time for years < 1000 (time.strptime()
  requires exactly 4 digits for %Y, hence a year < 1000 must be 0-padded).

Other Changes
-------------

* Changed string quoting style for PostgreSQL and MySQL from \\' to ''.

SQLObject 0.7.7
===============

Released 10 May 2007.

Bug Fixes
---------

* Fixed a bug in SQLRelatedJoin that ignored per-instance connection.

* Fixed a bug in MySQL connection in case there is no charset in the DB URI.

SQLObject 0.7.6
===============

Released 3 May 2007.

Bug Fixes
---------

* Fixed a longstanding bug with .select() ignoring 'limit' parameter.

* Fixed a bug with absent comma in JOINs.

* Fixed sqlbuilder - .startswith(), .endswith() and .contains() assumed
  their parameter must be a string; now you can pass an SQLExpression:
  Table.q.name.contains(func.upper('a')), for example.

* Fixed a longstanding bug in sqlbuilder.Select() with groupBy being a